tests/dataset/tpc-ds/compiler/c/q76.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:46Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:46Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  int sales_cnt;
  double sales_amt;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  int sales_cnt;
  double sales_amt;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  int sales_cnt;
  double sales_amt;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_qoy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  const char *i_category;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int ss_item_sk;
  double ss_ext_sales_price;
  int ss_sold_date_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_bill_customer_sk;
  int ws_item_sk;
  double ws_ext_sales_price;
  int ws_sold_date_sk;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_bill_customer_sk;
  int cs_item_sk;
  double cs_ext_sales_price;
  int cs_sold_date_sk;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  double ext_sales_price;
} store_part_item_t;
typedef struct {
  int len;
  store_part_item_t *data;
} store_part_item_list_t;
store_part_item_list_t create_store_part_item_list(int len) {
  store_part_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_part_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  double ext_sales_price;
} web_part_item_t;
typedef struct {
  int len;
  web_part_item_t *data;
} web_part_item_list_t;
web_part_item_list_t create_web_part_item_list(int len) {
  web_part_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_part_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *channel;
  int col_name;
  int d_year;
  int d_qoy;
  const char *i_category;
  double ext_sales_price;
} catalog_part_item_t;
typedef struct {
  int len;
  catalog_part_item_t *data;
} catalog_part_item_list_t;
catalog_part_item_list_t create_catalog_part_item_list(int len) {
  catalog_part_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_part_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int channel;
  int col_name;
  int d_year;
  int d_qoy;
  int i_category;
  int sales_cnt;
  double sales_amt;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q76_simplified_result;
static void test_TPCDS_Q76_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.channel = "store",
                            .col_name = 0,
                            .d_year = 1998,
                            .d_qoy = 1,
                            .i_category = "CatA",
                            .sales_cnt = 1,
                            .sales_amt = 10.0},
                   (tmp_item_t){.channel = "web",
                                .col_name = 0,
                                .d_year = 1998,
                                .d_qoy = 1,
                                .i_category = "CatB",
                                .sales_cnt = 1,
                                .sales_amt = 15.0},
                   (tmp_item1_t){.channel = "catalog",
                                 .col_name = 0,
                                 .d_year = 1998,
                                 .d_qoy = 1,
                                 .i_category = "CatC",
                                 .sales_cnt = 1,
                                 .sales_amt = 20.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q76_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q76_simplified_result.len; i3++) {
      if (test_TPCDS_Q76_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 1998, .d_qoy = 1}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  item_t item[] = {(item_t){.i_item_sk = 1, .i_category = "CatA"},
                   (item_t){.i_item_sk = 2, .i_category = "CatB"},
                   (item_t){.i_item_sk = 3, .i_category = "CatC"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  store_sale_t store_sales[] = {(store_sale_t){.ss_customer_sk = 0,
                                               .ss_item_sk = 1,
                                               .ss_ext_sales_price = 10.0,
                                               .ss_sold_date_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  web_sale_t web_sales[] = {(web_sale_t){.ws_bill_customer_sk = 0,
                                         .ws_item_sk = 2,
                                         .ws_ext_sales_price = 15.0,
                                         .ws_sold_date_sk = 1}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_bill_customer_sk = 0,
                                                     .cs_item_sk = 3,
                                                     .cs_ext_sales_price = 20.0,
                                                     .cs_sold_date_sk = 1}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  store_part_item_list_t tmp4 =
      store_part_item_list_t_create(store_sales.len * item.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < item_len; tmp7++) {
      item_t i = item[tmp7];
      if (!(i.i_item_sk == ss.ss_item_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < date_dim_len; tmp8++) {
        date_dim_t d = date_dim[tmp8];
        if (!(d.d_date_sk == ss.ss_sold_date_sk)) {
          continue;
        }
        if (!(ss.ss_customer_sk == 0)) {
          continue;
        }
        tmp4.data[tmp5] =
            (store_part_item_t){.channel = "store",
                                .col_name = ss.ss_customer_sk,
                                .d_year = d.d_year,
                                .d_qoy = d.d_qoy,
                                .i_category = i.i_category,
                                .ext_sales_price = ss.ss_ext_sales_price};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  store_part_item_list_t store_part = tmp4;
  web_part_item_list_t tmp9 =
      web_part_item_list_t_create(web_sales.len * item.len * date_dim.len);
  int tmp10 = 0;
  for (int tmp11 = 0; tmp11 < web_sales_len; tmp11++) {
    web_sale_t ws = web_sales[tmp11];
    for (int tmp12 = 0; tmp12 < item_len; tmp12++) {
      item_t i = item[tmp12];
      if (!(i.i_item_sk == ws.ws_item_sk)) {
        continue;
      }
      for (int tmp13 = 0; tmp13 < date_dim_len; tmp13++) {
        date_dim_t d = date_dim[tmp13];
        if (!(d.d_date_sk == ws.ws_sold_date_sk)) {
          continue;
        }
        if (!(ws.ws_bill_customer_sk == 0)) {
          continue;
        }
        tmp9.data[tmp10] =
            (web_part_item_t){.channel = "web",
                              .col_name = ws.ws_bill_customer_sk,
                              .d_year = d.d_year,
                              .d_qoy = d.d_qoy,
                              .i_category = i.i_category,
                              .ext_sales_price = ws.ws_ext_sales_price};
        tmp10++;
      }
    }
  }
  tmp9.len = tmp10;
  web_part_item_list_t web_part = tmp9;
  catalog_part_item_list_t tmp14 = catalog_part_item_list_t_create(
      catalog_sales.len * item.len * date_dim.len);
  int tmp15 = 0;
  for (int tmp16 = 0; tmp16 < catalog_sales_len; tmp16++) {
    catalog_sale_t cs = catalog_sales[tmp16];
    for (int tmp17 = 0; tmp17 < item_len; tmp17++) {
      item_t i = item[tmp17];
      if (!(i.i_item_sk == cs.cs_item_sk)) {
        continue;
      }
      for (int tmp18 = 0; tmp18 < date_dim_len; tmp18++) {
        date_dim_t d = date_dim[tmp18];
        if (!(d.d_date_sk == cs.cs_sold_date_sk)) {
          continue;
        }
        if (!(cs.cs_bill_customer_sk == 0)) {
          continue;
        }
        tmp14.data[tmp15] =
            (catalog_part_item_t){.channel = "catalog",
                                  .col_name = cs.cs_bill_customer_sk,
                                  .d_year = d.d_year,
                                  .d_qoy = d.d_qoy,
                                  .i_category = i.i_category,
                                  .ext_sales_price = cs.cs_ext_sales_price};
        tmp15++;
      }
    }
  }
  tmp14.len = tmp15;
  catalog_part_item_list_t catalog_part = tmp14;
  list_int all_rows = concat(store_part, web_part, catalog_part);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i19 = 0; i19 < result.len; i19++) {
    if (i19 > 0)
      printf(",");
    result_item_t it = result.data[i19];
    printf("{");
    _json_string("channel");
    printf(":");
    _json_int(it.channel);
    printf(",");
    _json_string("col_name");
    printf(":");
    _json_int(it.col_name);
    printf(",");
    _json_string("d_year");
    printf(":");
    _json_int(it.d_year);
    printf(",");
    _json_string("d_qoy");
    printf(":");
    _json_int(it.d_qoy);
    printf(",");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("sales_cnt");
    printf(":");
    _json_int(it.sales_cnt);
    printf(",");
    _json_string("sales_amt");
    printf(":");
    _json_float(it.sales_amt);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q76_simplified_result = result;
  test_TPCDS_Q76_simplified();
  return 0;
}
